--- a/src/app/pages/productos/ag3/ag3.page.html
+++ b/src/app/pages/productos/ag3/ag3.page.html
@@ -23,16 +23,14 @@
       <img [src]="imagenPValue" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo">{{ nombrePValue }}</ion-card-title>
-        <p class="subti" style="font-size: 25px; margin: 5px;">Precio: {{ precioPValue | currency:'$':true:'4.0-0' }}</p>
+        <p class="subti" style="font-size: 25px; margin: 5px;">Precio: {{ precioPValue | currency:'$':true:'4.0-0' }}
+        </p>
         <p class="subti">Descripción:</p>
         <p>{{ descripcionPValue }}</p>
         <!-- En tu plantilla HTML -->
         <ion-button *ngIf="idRol === 1" (click)="agregarAlCarrito()">Agregar al carrito</ion-button>
-        <ion-button *ngIf="idRol === 2" (click)="agregarAlCarrito()">Modificar</ion-button>
       </ion-card-content>
     </ion-card>
-    <br><br><br>
   </div>
-  <br><br><br>
   <app-componente2></app-componente2>
 </ion-content>
