editar producto listo

--- a/src/app/pages/admin/agregar-p-admin/agregar-p-admin.page.scss
+++ b/src/app/pages/admin/agregar-p-admin/agregar-p-admin.page.scss
@@ -51,7 +51,8 @@ ion-card {
   border: 3px solid #3D2652;
   box-shadow: #3D2652;
   width: 380px;
-  margin-top: 55px;
+  margin-top: 10px;
+  margin-bottom: 55px;
 }
 
 p {
