--- a/src/app/pages/m-datos/m-datos.page.scss
+++ b/src/app/pages/m-datos/m-datos.page.scss
@@ -1,169 +1,103 @@
 /*FONDO*/
 ion-content {
-  --background: url(https://w0.peakpx.com/wallpaper/939/832/HD-wallpaper-deep-purple-blue-design-pink-premium.jpg);
-
-  }
-  
-  ion-img {
-    width: 300px;
-    height: 300px;
-  }
-  
-  ion-card {
-    box-shadow: 2px 2px 2px #79F2E6;
-    border-radius: 16px;
-    background-color: #010626;
-    height: 650px;
-    max-width: 350px;
-    margin: 160px auto; /* Esto centrará horizontalmente la tarjeta */
-  }
-  
-  /*titulos*/
-  
-  @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Tilt+Prism&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-  
-  p {
-    color: white;
-    font-size: 15px;
-    text-align: left;
-    font-family: 'ADLaM Display', cursive;
-  }
-  
-  ion-card-title {
-    color: white;
-    font-size: 40px;
-    /* Ajusta el tamaño del título según tus preferencias */
-    margin: 5px;
-    text-align: center;
-    font-family: 'DM Serif Display', serif;
-  }
-  
-  .ion-title {
-    color: white;
-    font-family: 'DM Serif Display', serif;
-    font-size: 25px;
-    text-align: center;
-    margin: 5px;
-  }
-  
-  /* Estilo para los mensajes de error */
-  .error-message {
-    color: red;
-    font-size: 14px;
-    margin-top: 5px;
-  }
-
-  .circle {
-  margin: 20px auto; /* Centra el círculo horizontalmente y añade espacio arriba */
-  width: 150px; /* Ancho del círculo */
-  height: 150px; /* Altura del círculo */
-  background-color: #ffffff; /* Color de fondo del círculo */
-  border-radius: 50%; /* Hace que el elemento sea un círculo */
-  position: absolute; /* Colocación absoluta para superponer */
-  top: 17%; /* Centra verticalmente el círculo en el medio de la pantalla */
-  left: 50%; /* Centra el círculo horizontalmente */
-  transform: translate(-50%, -50%); /* Centra horizontal y verticalmente el círculo */
-  z-index: 1; /* Asegura que esté por encima del contenido */
-  border: 2px solid white; /* Borde blanco de 2 píxeles */
+  --background: white;
 }
 
-.circle-inner {
-  width: 100%; /* Ancho completo del círculo interno */
-  height: 100%; /* Altura completa del círculo interno */
-  overflow: hidden; /* Oculta el contenido que se desborde del círculo */
-  border-radius: 50%; /* Asegura que el contenido siga siendo circular */
+/*botones*/
+.btn {
+  --background: #7CC9CF;
 }
 
-ion-img {
-  border-radius: 50%; /* Hace que el elemento sea un círculo */
-  width: 100%; /* Asegura que la imagen ocupe todo el espacio disponible */
-  height: 100%; /* Asegura que la imagen ocupe todo el espacio disponible */
-  object-fit: cover; /* Ajusta la imagen para que se ajuste al círculo sin deformación */
+ion-button {
+  --background: #0C909C;
 }
 
-.edit {
-  width: 45px; /* Ancho del círculo */
-  height: 45px;
-  border-radius: 50%; /* Asegura que el elemento sea un círculo */
-  position: absolute; /* Colocación absoluta para posicionar al lado del círculo */
-  top: 20%; /* Mismo valor que el círculo para centrar verticalmente */
-  left: calc(50% + 55px); /* Coloca el elemento 75px a la derecha del centro del círculo */
-  z-index: 2; /* Asegura que esté por encima del círculo */
-  display: flex; /* Utiliza un contenedor flex para alinear el icono verticalmente */
-  align-items: center; /* Centra verticalmente el contenido dentro del contenedor flex */
-  justify-content: center; /* Centra horizontalmente el contenido dentro del contenedor flex */
-  --background:#79F2E6;  
-}
-
-ion-icon{
-  font-size: 55px;
+ion-input {
+  font-size: 15px;
   color: black;
+  font-family: 'Montserrat';
+
+  ion-input label {
+    font-weight: bold;
+  }
 }
 
-.icon-text-container {
-  display: flex; /* Utiliza un contenedor flex para alinear los elementos en línea */
-  align-items: center; /* Centra verticalmente los elementos */
+.foto{
+  margin-top: -60px;
+  margin-right: 120px;
+  --background:#3D2652;
 }
 
+.aletar{
+  font-size: 35px;
+  color: rgb(95, 94, 94);
+  margin-left: 5px ;
+}
+
+ion-card {
+  border-radius: 16px;
+  border: 3px solid #3D2652;
+  box-shadow: #3D2652;
+  width: 380px;
+  margin-top: 10px;
+  margin-bottom: 65px;
+}
+
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+.x{
+  margin-left: 45px;
+  margin-top: -50px; 
+  font-family: 'Montserrat';
+  font-weight: bold;
+  color: rgb(95, 94, 94);
+  font-size: 12px; 
+}
+
+.sin {
+  border: none;
+  box-shadow: none;
+  height: 170px;
+}
+
+/*titulos*/
+
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=DM+Serif+Display&family=Montserrat:wght@300&display=swap');
+
+ion-card-title {
+  color: black;
+  text-align: center;
+  margin: 5px;
+  font-family: 'Montserrat';
+}
+
+//el avatar del usuario:
+ion-avatar {
+  width: 150px;
+  height: 150px;
+  border: 5px solid #0C909C;
+  margin-left: 125px;
+
+  ion-avatar img {
+    width: 150px;
+    height: 150px;
+
+  }
+}
 
 /* Ajustes para dispositivos específicos */
-  @media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px) {
-    ion-card-title {
-      font-size: 30px;
-      /* Ajusta el tamaño del título para pantallas más pequeñas */
-    }
-  
-    .ion-title {
-      font-size: 40px;
-      /* Ajusta el tamaño del título para pantallas más pequeñas */
-    }
+@media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px) {
+  ion-card-title {
+    font-size: 30px;
+    /* Ajusta el tamaño del título para pantallas más pequeñas */
   }
 
-  //esto es del toolbar:
-//COSA DEL CARRITO::after
-:host {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.demo-section+.demo-section {
-  margin-top: 16px;
-}
-
-.demo-section {
-  margin-right: 20px;
-  /* Agrega margen al lado derecho del primer elemento */
-  display: flex;
-  /* Utiliza flexbox para alinear verticalmente los elementos */
-  align-items: center;
-  /* Centra verticalmente los elementos */
-}
-
-//BUSQUEDA:
-/* Estilos para el contenedor que contiene el ion-searchbar */
-.search-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  --ion-background-color: #0D0D0D;
-}
-
-ion-searchbar {
-  color: white;
-  width: 400px;
-  text-align: left;
-}
-
-ion-toolbar {
-  --background: #79F2E6;
-}
-
-.no-product-message {
-  text-align: center;
-  color: red;
-  font-weight: bold;
-  margin-top: 2px;
-  font-size: 35px;
+  .ion-title {
+    font-size: 40px;
+    /* Ajusta el tamaño del título para pantallas más pequeñas */
+  }
 }
