--- a/src/app/pages/admin/lista-usuario/lista-usuario.page.scss
+++ b/src/app/pages/admin/lista-usuario/lista-usuario.page.scss
@@ -1,110 +1,57 @@
-//esto es del toolbar:
-//COSA DEL CARRITO::after
-:host {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+/*FONDO*/
+ion-content {
+  --background: white;
 }
 
-.demo-section+.demo-section {
-  margin-top: 16px;
+/*botones*/
+
+ion-button {
+  --background: red;
+  margin-left: 20px;
 }
 
-.demo-section {
-  margin-right: 20px;
-  /* Agrega margen al lado derecho del primer elemento */
-  display: flex;
-  /* Utiliza flexbox para alinear verticalmente los elementos */
-  align-items: center;
-  /* Centra verticalmente los elementos */
-}
 
-//BUSQUEDA:
-/* Estilos para el contenedor que contiene el ion-searchbar */
-.search-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  --ion-background-color: #0D0D0D;
-}
+/*titulos*/
 
-ion-searchbar {
-  color: white;
-  width: 400px;
-  text-align: left;
-}
-
-ion-toolbar {
-  --background: #79F2E6;
-}
-
-.no-product-message {
-  text-align: center;
-  color: red;
-  font-weight: bold;
-  margin-top: 2px;
-  font-size: 35px;
-}
-
-/* Estilos para los títulos y textos */
-@import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Tilt+Prism&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-
-ion-list {
-  width: auto;
-}
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=DM+Serif+Display&family=Montserrat:wght@300&display=swap');
 
 ion-card-title {
-  border-color: #532473;
-  color: white;
-  font-size: 45px;
-  margin: 5px;
+  color: black;
   text-align: center;
-  font-family: 'DM Serif Display', serif;
-}
-
-.ion-title {
-  color: white;
-  font-family: 'DM Serif Display', serif;
-  font-size: 25px;
-  text-align: left;
-  margin: 3px;
-}
-
-/* Estilos para el fondo */
-ion-content {
-  --background: url(https://w0.peakpx.com/wallpaper/939/832/HD-wallpaper-deep-purple-blue-design-pink-premium.jpg);
-}
-
-ion-card {
-  box-shadow: 6px 2px 6px #79F2E6;
   margin: 5px;
-  background-color: #010626;
-  width: fit-content;
-  height: max-content;
-
-}
-.borrar{
-  --background: red;
+  font-family: 'Montserrat';
 }
 
-ion-button{
-  --background: #7630D9;
-}
+//el avatar del usuario:
+ion-avatar {
+  width: 80px;
+  height: 80px;
+  border: 5px solid #0C909C;
 
-.user-circle {
-  text-align: center;
-  margin: 10px; /* Espacio alrededor del círculo */
-}
+  ion-avatar img {
+    width: 80px;
+    height: 80px;
 
-.user-circle img {
-  width: 250px; /* Ajusta el tamaño según tus preferencias */
-  height: 250px; /* Ajusta el tamaño según tus preferencias */
-  border-radius: 50%;
+  }
 }
 
 .center-button {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 15px;
+  --background: #0C909C;
+}
+
+/* Ajustes para dispositivos específicos */
+@media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px) {
+  ion-card-title {
+    font-size: 30px;
+    /* Ajusta el tamaño del título para pantallas más pequeñas */
+  }
+
+  .ion-title {
+    font-size: 40px;
+    /* Ajusta el tamaño del título para pantallas más pequeñas */
+  }
 }
