--- a/src/app/pages/admin/lista-usuario/lista-usuario.page.html
+++ b/src/app/pages/admin/lista-usuario/lista-usuario.page.html
@@ -1,48 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <!-- LOGO DEL CARRITO -->
-    <div class="demo-section" slot="end">
-      <mat-icon [matBadge]="0" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
-        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;" name="cart-outline"></ion-icon>
-      </mat-icon>
-    </div>
-
-    <!-- MENÚ DE BÚSQUEDA -->
-    <ion-buttons slot="start">
-      <ion-menu-button style="color: #0D0D0D;"></ion-menu-button>
-    </ion-buttons>
-
-    <!-- EL BUSCADOR -->
-    <div class="search-container">
-      <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="searchProducts()"></ion-searchbar>
-    </div>
+    <ion-card-title>Nuestros Usuarios</ion-card-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card-title>TimeTecheros</ion-card-title>
-  <div class="center-button">
-    <ion-button [routerLink]="['/nuevo-admin']">Agregar nuevo admin</ion-button>
-  </div>
-  
-  <ion-grid>
-    <ion-row *ngIf="usuarios.length > 0">
-      <ion-col size="12" size-md="6" size-lg="4" *ngFor="let usuario of usuarios">
-        
-        <ion-card>
-          <div class="user-circle">
-            <img [src]="usuario.fotoU" />
-          </div>
-          <ion-card-content style="color: white; text-align: center;">
-            {{ usuario.nombreU }} {{ usuario.apellidoU }} - {{ usuario.correoU }}
-            <br>
-            <ion-button class="borrar" (click)="eliminarUsuario(usuario)">Eliminar usuario</ion-button>
-          </ion-card-content>
-        </ion-card>
-        <br><br><br>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+
+  <ion-button class="center-button" [routerLink]="['/nuevo-admin']">Agregar nuevo admin</ion-button>
+
+  <ion-list *ngFor="let usuario of usuarios">
+    <ion-item style="color: black; text-align: left; font-family: 'Montserrat';">
+      <ion-avatar aria-hidden="true" slot="start">
+        <img [src]="usuario.fotoU || 'https://ionicframework.com/docs/img/demos/avatar.svg'" />
+      </ion-avatar>
+      {{ usuario.nombreU }} {{ usuario.apellidoU }} - {{ usuario.correoU }}
+      <ion-button (click)="eliminarUsuario(usuario)"><ion-icon name="close-circle-outline"></ion-icon></ion-button>
+    </ion-item>
+  </ion-list>
 
   <!--MENU DOS-->
   <app-componente2></app-componente2>
