--- a/src/app/pages/inicio/correo/correo.page.html
+++ b/src/app/pages/inicio/correo/correo.page.html
@@ -1,21 +1,15 @@
 <ion-content class="fondo" [fullscreen]="true">
-  <ion-grid>
-    <ion-row class="center-row">
-      <ion-card class="input-card">
-        <ion-card-content class="input-container">
-          <ion-card-title>Recuperar clave:</ion-card-title><br>
-          <div class="input-row">
-            <ion-icon name="bulb-outline"></ion-icon>
-            <p>ingrese su correo electrónico y mas adelante se le entregaran mas instrucciones</p>
-            <!-- EMAIL -->
-            <ion-input label="Email:" type="text" label-placement="floating" fill="outline"
-              placeholder="correo@example.com" name="email" [(ngModel)]="correo">
-            </ion-input>
-            <ion-button expand="50px" style="align-content: center;align-items: center;display: flex;"
-               (click)="validarCorreoEnBD()">ir</ion-button>
-          </div>
-        </ion-card-content>
-      </ion-card>
-    </ion-row>
-  </ion-grid>
+  <ion-card>
+    <ion-card-content>
+      <ion-card-title>Recuperar clave:</ion-card-title><br>
+      <ion-icon class="aletar" name="bulb-outline"></ion-icon>
+      <p class="x">ingrese su correo electrónico y mas adelante se le entregaran mas instrucciones</p>
+      <!-- EMAIL -->
+      <ion-input label="Email:" type="text" label-placement="floating" fill="outline" placeholder="correo@example.com"
+        name="email" [(ngModel)]="correo">
+      </ion-input>
+      <ion-button expand="50px" style="align-content: center;align-items: center;display: flex;"
+        (click)="validarCorreoEnBD()">Siguiente</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
