--- a/src/app/pages/inicio/registro/registro.page.html
+++ b/src/app/pages/inicio/registro/registro.page.html
@@ -1,11 +1,10 @@
 <ion-content class="fondo" [fullscreen]="true">
-  <ion-grid>
-    <ion-row class="center-row">
-      <ion-card class="input-card">
-        <ion-card-content class="input-container">
+
+      <ion-card >
+        <ion-card-content>
           <form id="registration-form">
             <ion-card-title>Registro:</ion-card-title><br>
-            <div class="input-row">
+            <div >
               <!-- NOMBRE -->
               <ion-input label="Nombre:" type="text" label-placement="floating" fill="outline" placeholder="Mario"
                 name="nombreU" required [(ngModel)]="nombreUValue" (ionBlur)="verificarFormulario()"
@@ -26,7 +25,6 @@
               placeholder="11.111.111-1" name="rut" required [(ngModel)]="rutValue" (ionBlur)="verificarFormulario()"
               (keydown)="valiRut($event)" inputmode="decimal">
             </ion-input>
-
             <!-- VALIDACION -->
             <div class="error-message" *ngIf="errors.rut">{{ errors.rut }}</div>
             <!-- EMAIL -->
@@ -36,9 +34,6 @@
             </ion-input>
             <!-- VALIDACION EMAIL -->
             <div class="error-message" *ngIf="errors.email">{{ errors.email }}</div>
-
-
-
             <!-- CONTRASEÑA -->
             <ion-input label="Contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="M1@password" name="password" required [(ngModel)]="passwordValue"
@@ -46,8 +41,6 @@
             </ion-input>
             <!-- VALIDACION CONTRASEÑA -->
             <div class="error-message" *ngIf="errors.password">{{ errors.password }}</div>
-
-
             <!-- CONFIRMAR CONTRASEÑA -->
             <ion-input label="Confirmar Contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="Confirmar contraseña" name="confirmPassword" required [(ngModel)]="confirmPasswordValue"
@@ -55,16 +48,14 @@
             </ion-input>
             <!-- VALIDACION -->
             <div class="error-message" *ngIf="errors.confirmPassword">{{ errors.confirmPassword }}</div>
-
             <!-- Pregunta de seguridad -->
             <ion-select label="Pregunta de Seguridad" label-placement="floating" fill="outline"
               [(ngModel)]="usuarioPregunta" required>
               <ion-select-option *ngFor="let pregunta of arregloPreguntas" value="{{ pregunta.idPregunta }}">{{
                 pregunta.nombrePregunta }}</ion-select-option>
-            </ion-select><br>
+            </ion-select>
             <!--VALIDACION DE LA PREGUNTA-->
             <div class="error-message" *ngIf="errors.usuarioPregunta">{{ errors.usuarioPregunta }}</div>
-
             <!-- Respuesta a la pregunta de seguridad -->
             <ion-input label="Respuesta" type="text" label-placement="floating" fill="outline" placeholder="Respuesta"
               name="respuestaSeguridad" [(ngModel)]="respuestaSeguridad" (ionBlur)="verificarFormulario()" required>
@@ -72,13 +63,12 @@
             <!-- VALIDACION -->
             <div class="error-message" *ngIf="errors.respuestaSeguridad">{{ errors.respuestaSeguridad }}</div>
             <!--BOTON-->
-            <ion-button (click)="insertar()" [routerLink]="['/inicio-sesion']"
+            <ion-button expand="50px" style="align-items: center;display: flex;" (click)="insertar()" [routerLink]="['/inicio-sesion']"
               [disabled]="!formularioValido">Registrarse</ion-button>
             <!--MENSAJITO-->
             <p style="text-align: center;">¿Tiene una cuenta?<a [routerLink]="['/inicio-sesion']">Inicie sesión</a></p>
           </form>
         </ion-card-content>
       </ion-card>
-    </ion-row>
-  </ion-grid>
+
 </ion-content>
