--- a/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.scss
+++ b/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.scss
@@ -1,71 +1,79 @@
-/* este es el fondo */
+/*FONDO*/
 ion-content {
-  --background: url(https://w0.peakpx.com/wallpaper/939/832/HD-wallpaper-deep-purple-blue-design-pink-premium.jpg);
+  --background: white;
 }
 
-ion-input {
-  width: 100%;
-}
-
-/* Centrar el contenido verticalmente y horizontalmente */
-.fondo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  /* Color de fondo */
-}
-
-/* Estilo para las tarjetas de entrada */
-.input-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 500px;
-  max-width: 350px;
-  margin: 150px auto;
-  border-radius: 20px;
-  box-shadow: 0px 2px 6px #79F2E6;
-  background: #010626;
-}
-
-/* Estilo para los mensajes de error */
-.error-message {
-  color: red;
-  font-size: 14px;
-  margin-top: 5px;
-}
-
-/* Personaliza el borde y el padding de los campos de entrada */
-ion-input {
-  --padding-start: 15px;
-  --padding-end: 15px;
-  --border-radius: 8px;
-  line-height: 2.5;
-  /* Ajusta el valor según tus preferencias */
-  margin-bottom: 15px;
-  background-color: #222222;
-}
-
-ion-card-title {
-  color: white;
-  text-align: center;
-  font-size: 35px;
-  /* Ajusta el tamaño del título según tus preferencias */
-}
-
-p {
-  text-align: justify;
-  color:white;
-}
-a{
-  color:white;
+/*botones*/
+.btn {
+  --background: #7CC9CF;
 }
 
 ion-button {
-  --background: #79F2E6;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  --background: #0C909C;
+}
+
+ion-input {
+  font-size: 15px;
+  color: black;
+  font-family: 'Montserrat';
+  margin-bottom: 15px;
+
+  ion-input label {
+    font-weight: bold;
+  }
+}
+
+ion-select {
+  font-size: 15px;
+  color: black;
+  font-family: 'Montserrat';
+  margin-bottom: 15px;
+}
+
+ion-select-option {
+  font-size: 15px;
+  color: black;
+  font-family: 'Montserrat';
+  margin-bottom: 15px;
+}
+
+ion-card {
+  border-radius: 16px;
+  border: 3px solid #3D2652;
+  box-shadow: #3D2652;
+  width: 380px;
+  margin-top: 75px;
+}
+
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 15px;
+  font-family: 'Montserrat';
+}
+
+
+/*titulos*/
+
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=DM+Serif+Display&family=Montserrat:wght@300&display=swap');
+
+ion-card-title {
+  color: black;
+  text-align: center;
+  margin: 5px;
+  font-family: 'Montserrat';
+  font-size: 45px;
+}
+
+/* Ajustes para dispositivos específicos */
+@media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px) {
+  ion-card-title {
+    font-size: 30px;
+    /* Ajusta el tamaño del título para pantallas más pequeñas */
+  }
+
+  .ion-title {
+    font-size: 40px;
+    /* Ajusta el tamaño del título para pantallas más pequeñas */
+  }
 }
