--- a/src/app/pages/categoria/relojsma/relojsma.page.html
+++ b/src/app/pages/categoria/relojsma/relojsma.page.html
@@ -2,15 +2,13 @@
   <ion-toolbar>
     <!-- LOGO DEL CARRITO -->
     <div class="demo-section" slot="end">
-      <mat-icon [matBadge]="0" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
-        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;"
-          name="cart-outline"></ion-icon>
-      </mat-icon>
+      <ion-icon style="width: 35px; height: 35px; color: #050025;" name="cart-outline"
+        [routerLink]="['/carrito']"></ion-icon>
     </div>
 
     <!-- MENÚ DE BÚSQUEDA -->
     <ion-buttons slot="start">
-      <ion-menu-button style="color: #0D0D0D;;"></ion-menu-button>
+      <ion-menu-button style="color: #050025;;"></ion-menu-button>
     </ion-buttons>
 
     <!-- EL BUSCADOR -->
@@ -22,6 +20,7 @@
 
 <!--################################################PRODUCTOS########################################-->
 <ion-content [fullscreen]="true">
+
   <ion-grid>
     <ion-card-title>Relojes Smartwatch</ion-card-title>
     <!-- Mostrar mensaje de error si no se encuentran productos -->
