--- a/src/app/pages/categoria/relojsma/relojsma.page.scss
+++ b/src/app/pages/categoria/relojsma/relojsma.page.scss
@@ -1,110 +1,137 @@
-//esto es del toolbar:
-//COSA DEL CARRITO::after
-:host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .demo-section+.demo-section {
-    margin-top: 16px;
-  }
-  
-  .demo-section {
-    margin-right: 20px;
-    /* Agrega margen al lado derecho del primer elemento */
-    display: flex;
-    /* Utiliza flexbox para alinear verticalmente los elementos */
-    align-items: center;
-    /* Centra verticalmente los elementos */
-  }
-  
-  //BUSQUEDA:
-  /* Estilos para el contenedor que contiene el ion-searchbar */
-  .search-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    --ion-background-color: #0D0D0D;
-  }
-  
-  ion-searchbar {
-    color: white;
-    width: 400px;
-    text-align: left;
-  }
-  
-  ion-toolbar {
-    --background: #79F2E6;
-  }
-
-  .no-product-message {
-    text-align: center;
-    color: red;
-    font-weight: bold;
-    margin-top: 2px;
-    font-size: 35px;
-  }
 /* Estilos para las imágenes */
 ion-img {
-    width: 250px;
-    height: 250px;
+  width: auto;
+  height: auto;
 }
 
 /* Estilos generales para las tarjetas */
 ion-card {
-    background-color: #010626;
-    box-shadow: 0px 2px 6px #F079F2;
-    width: fit-content;
-    height: max-content;
+  background-color: #050025;
+  width: max-content;
+  height: max-content;
+  border: 3px solid #050025;
 }
 
-/* Estilos para el grid y las tarjetas */
+/* Estilos para las tarjetas de productos */
 ion-grid ion-row {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 ion-grid ion-card {
-    margin: 10px;
-    max-width: 250px; /* Ajusta el ancho de las tarjetas para hacerlas más angostas */
+  margin: 10px;
+  max-width: 350px;
+  /* Ajusta el ancho de las tarjetas de productos */
 }
 
 ion-img.img-container {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 /* Estilos para los títulos y textos */
-@import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Tilt+Prism&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=DM+Serif+Display&family=Montserrat:wght@300&display=swap');
 
-p {
-    color: white;
-    font-size: 30px;
-    text-align: center;
-    font-family: 'ADLaM Display', cursive;
+ion-card-content {
+  margin: auto;
+}
+.otro{
+  --background: #7CC9CF;
+}
+.otro2{
+  --background: #3D2652;
 }
 
 ion-card-title {
-    color: white;
-    font-size: 40px;
-    margin: 5px;
-    text-align: center;
-    font-family: 'DM Serif Display', serif;
+  color: black;
+  font-size: 35px;
+  margin: 2px;
+  margin-top: 5px;
+  text-align: center;
+  font-family: 'Montserrat';
+}
+
+.center-buttons {
+  margin-left: 130px;
 }
 
 .ion-title {
-    color: white;
-    font-family: 'DM Serif Display', serif;
-    font-size: 20px;
-    text-align: left;
-    margin: 5px;
+  color: white;
+  font-size: 25px;
+  text-align: left;
+  margin: 3px;
+  font-family: 'Montserrat';
 }
 
 /* Estilos para el fondo */
 ion-content {
-  --background: url(https://w0.peakpx.com/wallpaper/939/832/HD-wallpaper-deep-purple-blue-design-pink-premium.jpg);
+  --background: white;
+}
 
+/* Estilos para las pipes (tabla) */
+p{
+  align-items: center;
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  font-family: 'Montserrat';
+}
+
+//botones:
+ion-button {
+  --background: #0C909C;
+}
+
+.borrar {
+  --background: red;
+}
+
+//esto es del toolbar:
+//COSA DEL CARRITO::after
+:host {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.demo-section+.demo-section {
+  margin-top: 16px;
+}
+
+.demo-section {
+  margin-right: 20px;
+  /* Agrega margen al lado derecho del primer elemento */
+  display: flex;
+  /* Utiliza flexbox para alinear verticalmente los elementos */
+  align-items: center;
+  /* Centra verticalmente los elementos */
+}
+
+
+//BUSQUEDA:
+/* Estilos para el contenedor que contiene el ion-searchbar */
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  --ion-background-color: #050025;
+}
+
+ion-searchbar {
+  color: #ffffff;
+  width: 400px;
+  text-align: left;
+}
+
+ion-toolbar {
+  --background: #ffffff;
+}
+
+.no-product-message {
+  text-align: center;
+  color: red;
+  font-weight: bold;
+  margin-top: 2px;
+  font-size: 35px;
 }
