--- a/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.scss
+++ b/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.scss
@@ -42,7 +42,7 @@ ion-card {
   border: 3px solid #3D2652;
   box-shadow: #3D2652;
   width: 380px;
-  margin-top: 75px;
+  margin-top: 45%;
 }
 
 .error-message {
