--- a/src/app/pages/Shop/historial/historial.page.scss
+++ b/src/app/pages/Shop/historial/historial.page.scss
@@ -18,6 +18,7 @@
   /* Aumenta el ancho de la tarjeta al 80% del contenedor */
   text-align: center;
   /* Centra el texto horizontalmente */
+  margin-bottom: 10px;
 }
 
 .card-image {
