CAMBIOS se pueden modificar desde las categorias

--- a/src/app/components/componente2/componente2.component.scss
+++ b/src/app/components/componente2/componente2.component.scss
@@ -12,13 +12,14 @@
 .fixed-bottom-menu ion-icon {
   font-size: 25px; /* Ajusta el tamaño de los íconos según sea necesario */
   margin-top: 7px;
-  margin-left: 15px;
+  margin-left: 18px;
   margin-right: 25px;
 }
 
 ion-tab-button {
   font-size: 15px;
   color:#F3F2F0;
+  text-align: center;
 }
 
 ion-tabs {
