--- a/src/app/pages/categoria/audiina/audiina.page.html
+++ b/src/app/pages/categoria/audiina/audiina.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <!-- LOGO DEL CARRITO -->
-    <div class="demo-section" slot="end">
+    <div class="demo-section" slot="end" *ngIf="rol == 1">
       <ion-icon style="width: 35px; height: 35px; color: #050025;" name="cart-outline"
         [routerLink]="['/carrito']"></ion-icon>
     </div>
@@ -22,17 +22,19 @@
 <ion-content [fullscreen]="true">
 
   <ion-grid>
-    <ion-card-title>Audífonos Bluetooth</ion-card-title>
+    <ion-card-title>Audífonos bluetooth</ion-card-title>
     <!-- Mostrar mensaje de error si no se encuentran productos -->
     <div *ngIf="noProductFound()" class="no-product-message">No existe ese producto</div>
     <!--PRIMER PRODUCTO-->
     <ion-row>
-      <ion-card *ngFor="let producto of arregloProductosResultado" (click)="ver(producto)">
+      <ion-card *ngFor="let producto of arregloProductosResultado">
         <ion-img [src]="producto.foto" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title class="ion-title">{{ producto.nombreProducto }}</ion-card-title>
           <ion-card-content>
             <p>{{ producto.precio | currency:'$':true:'4.0-0' }}</p>
+            <ion-button expand="50px" style="align-items: center;display: flex;" *ngIf="rol == 1" (click)= "ver(producto)">Detalle</ion-button>
+            <ion-button expand="50px" style="align-items: center;display: flex;" *ngIf="rol == 2" (click)="modificar(producto)">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
